--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "qrcode.react": "^4.2.0",
     "react": "^18.0.1",
     "react-dom": "^18.0.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.8.1",
