--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-router-dom": "^7.8.2",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.17.0",
+    "react-toast": "^1.0.3",
+    "react-toastify": "^11.0.5",
     "socket.io-client": "^4.8.1",
     "web-vitals": "^2.1.4",
     "zustand": "^5.0.8"
