--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "upload-s3": "aws s3 sync build/ s3://greenstonepackagingcorp",
+    "invalid-cf-cache": "aws cloudfront create-invalidation --distribution-id E1MMGK0YC5VYUQ --paths '/*'",
+    "deploy-s3": "npm run build && npm run upload-s3"
   },
   "eslintConfig": {
     "extends": [
