--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 https=true
-REACT_APP_API_URL=https://guest-attendance-app-8yx3.onrender.com
+REACT_APP_API_URL=https://guest-attendance-app.onrender.com
 
 
 AWS_ACCESS_KEY=greenstonepackagingcorporation
